cmake_minimum_required(VERSION 3.16)
project(lab11-templates)

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

add_subdirectory(lab1-simple-program)
add_subdirectory(lab2-string-class)
add_subdirectory(lab3-operator-overloading)
add_subdirectory(lab4-smart-pointers)
add_subdirectory(lab5-pi-pico)
add_subdirectory(lab6-inheritance)
add_subdirectory(lab7-abstract-class)
add_subdirectory(lab8-observer-pattern)
add_subdirectory(lab9-map-pair)

